--- a/src/index.css
+++ b/src/index.css
@@ -1,76 +1,68 @@
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
 body {
-    background-color: rgb(154, 168, 168);
-}
-#map, #infoPage{
-    height: 473px;
-}
-#infoPage {
-    overflow:visible;
-}
-
-.container {
-    display:grid;
-}
-
-/* columns */
-.container > * {
-    padding:1rem;
-}
-
-/* tablet breakpoint */
-@media (min-width:768px) {
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    #map, #infoPage{
-        height: 950px;
-    }
-    #infoPage{
-        overflow:auto;
-    }
-}
-.header, .footer{
-    background: darkred;
-    color: white; 
-    font-size: larger;
-    font-weight: 900;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    /* padding: 1em; */
-
-    display:flex;
-}
-.headerBtn, .otherHeaderBtn, #searchBox {
-    margin-left: 7rem;
-}
-.battleInfo {
-    background: aliceblue;
-}
-.headerBtn{
-    padding: 1em;
-    /* background: transparent; */
-}
-.countryListBtn{
-    padding: 1em;
-    margin: 0.5em;
-    font-size: larger;
-}
-.letterHeader{
-    font-size: xx-large;
-    margin-top: 1em;
-}
-.battleTitle{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 500;
-    margin-bottom: 1em;
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
 h1 {
-    font-size: xx-large;
-    padding: 1rem;
+  font-size: 3.2em;
+  line-height: 1.1;
 }
-.battleListBtn{
-    text-decoration: underline;
-    color: blue;
-    cursor: pointer;
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
