--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,52 @@
-#root {
+
+body {
+  margin: 0;
+}
+
+h1 {
+  font-size: 2.5em;
+  line-height: 1.4em;
+}
+h2 {
+  font-size: 1.5em;
+  line-height: 1.4em;
+}
+h3 {
+  font-size: 1em;
+  line-height: 1.4em;
+}
+h4 {
+  font-size: .75em;
+  line-height: 1.4em;
 }
 
 .leaflet-container {
-  height: 76vh;
-  width: 100vw;
+  height: 91vh;
+  width: 100%;
+  z-index: 1;
+
+}
+
+.infoPanel {
+  position: absolute;
+  right: 0;
+  z-index: 99;
+  background-color: goldenrod;
+  border-radius: 0 0 0 1em;
+  padding: 0 0 0em .7em;
+}
+
+/* top right bottom left */
+/* top right-left bottom */
+.countryList, .battleList {
+  padding: 0 0 .7em .5em;
+
+  max-height: 50vh;
+  width: 25vw;
+  overflow-y: auto;
+}
+.arrow {
+  position: absolute;
+  right: 0px;
+  z-index: 100;
 }
