--- a/src/App.css
+++ b/src/App.css
@@ -155,3 +155,11 @@ td {
   transform: translateY(-1.7em);
   right: 0;
 }
+.popup {
+  position: fixed;
+  width: 50%;
+  height: 100%;
+  transform: translateY(-3.5em);
+
+  background-color: pink;
+}
