--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,7 @@ td {
   background-color: gainsboro;
   width: 15em;
   height: 40em;
+  z-index: 10;
 }
 .navCountry> * {
   padding: .8em 1.4em;
@@ -154,6 +155,8 @@ td {
   position: fixed;
   transform: translateY(-1.7em);
   right: 0;
+  z-index: 10;
+
 }
 .popup {
   position: fixed;
@@ -161,5 +164,9 @@ td {
   height: 100%;
   transform: translateY(-3.5em);
 
-  background-color: pink;
+  background-color: goldenrod;
+
+  display: flex;
+  align-items: center;
+  flex-flow: column;
 }
