--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ h4 {
   position: absolute;
   right: 0;
   z-index: 99;
-  background-color: goldenrod;
+  background-color: rgb(190, 144, 28);
   border-radius: 1em 0 0 1em;
   padding: 0 0 0 .7em;
   margin-top: 1em;
@@ -41,8 +41,8 @@ h4 {
 /* top right bottom left */
 /* top right-left bottom */
 .countryList, .battleList {
-  padding: 0 .5em .7em;
-
+  padding: .5em;
+  background-color: goldenrod;
   max-height: 50vh;
   /* width: 20vw; */
   overflow-y: auto;
