--- a/src/App.css
+++ b/src/App.css
@@ -67,13 +67,28 @@ h4 {
   display: flex;
   
 }
+.accountBtns {
+  position: absolute;
+  right: 0;
+}
 .content { 
 }
 .zoomSlider {
   display: flex;
   padding: .25em 0;
 }
-
+/* login/register popup */
+.loginRegister {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background-color: antiquewhite;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  
+}
 
 
 /* battlelist page */
