--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ h4 {
   display: flex;
   align-items: center;
 }
-.arrow {
+.infoPanelVisBtn {
   position: absolute;
   right: 0px;
   z-index: 1;
@@ -66,12 +66,6 @@ h4 {
 
   display: flex;
   
-}
-.accountBtns {
-  position: absolute;
-  right: 0;
-  display: flex;
-  align-items: first x;
 }
 .content { 
 }
@@ -93,10 +87,36 @@ h4 {
 }
 
 /* user pfp button and dropdown */
+.accountBtns {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 102;
+  display: flex;
+  align-items: end;
+}
+.accountDropdownDiv {
+  display: flex;
+  flex-flow: column;
+  align-items: end;
+  align-content: flex-end;
+}
+.accountPfp {
+  --diameter: 4em;
+  border-radius: var(--diameter);
+  height: var(--diameter);
+  width: var(--diameter);
+}
 .dropdown{
   background-color: pink;
   color: black;
-  z-index: 201;
+  z-index: 101;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+.dropdown > button {
+  width: 100%;
 }
 
 
