--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,12 @@ h4 {
 }
 
 .leaflet-container {
-  height: 91vh;
+  height: 100vh;
   width: 100%;
-  z-index: 1;
-
+  z-index: 10;
+}
+.map {
+  width: 100%;
 }
 
 .infoPanel {
