--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,8 @@ h4 {
 .leaflet-container {
   height: 100vh;
   width: 100%;
-  z-index: 10;
+  z-index: 1;
 }
-.map {
-  width: 100%;
-}
-
 .infoPanel {
   position: absolute;
   right: 0;
@@ -59,16 +55,23 @@ h4 {
   right: 0px;
   z-index: 1;
 }
+
 .header {
   /* position: fixed; */
   background-color: maroon;
   color: whitesmoke;
   z-index: 100;
   width: 100%;
-
   display: flex;
-  
 }
+div > ul > li {
+  background-color: whitesmoke;
+  text-align: center;
+  line-break: normal;
+  margin: 1em;
+}
+
+
 .content { 
 }
 .zoomSlider {
