--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   background-color: gray;
@@ -65,11 +64,12 @@ h4 {
   display: flex;
 }
 div > ul > li {
-  background-color: whitesmoke;
-  text-align: center;
-  line-break: normal;
+  background-color: goldenrod;
   margin: 1em;
+  display: flex;
+  align-items: center;
 }
+.battlemap {margin: 0em;}
 
 .zoomSlider {
   display: flex;
@@ -226,8 +226,13 @@ td > button {
 .centerTxt {
   text-align: center;
 }
-
-
+/* CHAT PAGE */
+.chatDisplay {
+  overflow-y: auto;
+  height: 45em;
+  background-color: gainsboro;
+  padding: 1em;
+}
 
 
 /* ABOUT PAGE */
@@ -235,4 +240,9 @@ td > button {
  display: flex;
  flex-flow: column;
  align-items: center;
+}
+.myMessage {
+  position: relative;
+  background-color: antiquewhite;
+  right: 0;
 }
