--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 2.4em;
   line-height: 1.4em;
 }
 h2 {
@@ -20,12 +20,20 @@ h2 {
   line-height: 1em;
 }
 h3 {
-  font-size: 1.2em;
-  line-height: 1.4em;
+  font-size: 1.5em;
+  line-height: 1em;
 }
 h4 {
+  font-size: 1.2em;
+  line-height: 1em;
+}
+h5 {
+  font-size: 1em;
+  line-height: 1em;
+}
+h6 {
   font-size: 0.75em;
-  line-height: 1.4em;
+  line-height: 1em;
 }
 button {
   background-color: whitesmoke;
@@ -37,10 +45,10 @@ button {
 }
 button:disabled {
   text-decoration: wavy;
-  opacity: 0.6;
+  opacity: 0.4;
 }
 .accountPfp {
-  --diameter: 3.5em;
+  --diameter: 3.3em;
   border-radius: var(--diameter);
   height: var(--diameter);
   width: var(--diameter);
