--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,15 +28,15 @@ h1 {
 }
 h2 {
   font-size: 2em;
-  line-height: 1em;
+  line-height: 1.3em;
 }
 h3 {
   font-size: 1.5em;
-  line-height: 1em;
+  line-height: 1.2em;
 }
 h4 {
   font-size: 1.2em;
-  line-height: 1em;
+  line-height: 1.1em;
 }
 h5 {
   font-size: 1em;
@@ -50,6 +50,8 @@ button {
   background-color: whitesmoke;
   border: 0.1rem solid gray;
   border-radius: 0.4rem;
+
+  color: black;
 
   padding: 0.15rem;
   line-break: none;
