--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -127,3 +127,13 @@ input {
     display: block;
   }
 }
+
+/* number input, removes buttons */
+.no-spinners {
+  -moz-appearance: textfield; /* For Firefox */
+}
+.no-spinners::-webkit-outer-spin-button,
+.no-spinners::-webkit-inner-spin-button {
+  -webkit-appearance: none; /* For Chrome, Safari, Edge, Opera */
+  margin: 0; /* Removes any margin that might be added */
+}
